updated to a bigger footer

--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -181,35 +181,36 @@
 
 	<!-- INTRO SLIDE -->
 	<!-- Slide #55 -->
-<section class="slide fade kenBurns">
+<section class="slide fade kenBurns" id="">
   <div class="content">
-    <div class="container">
+    <div class="container" style="height: 460px;">
       <div class="wrap">
-					<h1 class="">Hör gärna av dig!</h1>
-					<div class=""><p>För snabbast assistens så får du gärna fylla i formuläret</p></div>
-					<div class="fix-5-12">
-						<div class="pad shadow selected ">
-							<form action="ajax-email.php" id="contact-form" method="post" class="wide center" data-ajax-form="true">
-								<div class="label cropTop"><label class="cropTop left small bold" for="name55">För och efternamn</label></div>
-								<input class="stroke left wide" id="name55" type="name" name="yourName" placeholder="Ert namn..." required/>
-								<div class="label"><label class="left small bold" for="email55">E-post adress</label></div>
-								<input class="stroke left wide" id="email55" type="email" name="yourEmail" placeholder="E-post adress..." required/>
-								<div class="label cropTop"><label class="cropTop left small bold" for="name55">Telefon</label></div>
-								<input class="stroke left wide" id="phone55" type="text" name="yourPhone" placeholder="Telefon nr..." required/>
-								<div class="label"><label class="left small bold" for="message55">Ditt meddelande...</label></div>
-								<textarea class="left " id="message55" type="text" name="yourMessage" placeholder="Ditt meddelande..." required></textarea>
-								<input class="common-Button wide blue cropBottom" type="submit" name="submit" value="Skicka meddelandet" data-success-text="Skickat!" data-success-class="green"/>
-							</form>
-						</div>
-					</div>
-
-
+        <div class="fix-10-12">
+					<h1 class="hero-title">Nyheter från Besiktningsman.se</h1>
+        </div>
       </div>
     </div>
   </div>
-  <div class="background" style="background-image:url(../assets/img/backgrounds/ispect_close.jpg)"></div>
+	<div class="background" style="background-image:url(../assets/img/backgrounds/typer.jpg)"></div>
 </section>
+<!-- Slide #81 -->
+<section class="slide fade kenBurns whiteSlide">
+  <div class="content">
+    <div class="container">
+      <div class="wrap">
 
+        <div class="fix-10-12">
+          <h1 class="ae-1 fromLeft left">Bostadsforum 2017</h1>
+          <div class="ae-2 fromLeft left">
+            <p>Vi var på Bostadsforum i år igen och det var fantastiskt trevligt att få träffa samtliga under mässan! Hoppas på ett lika lyckat Bostadsforum 2018.</p>
+						<img src="../assets/img/nyheter/bostadsforum17.jpg" alt="">
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
 <section class="slide fade whiteSlide autoHeight customFooter">
   <div class="content">
     <div class="container">
