--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -763,45 +763,52 @@
     </div>
   </div>
 </section>
+<section class="slide fade whiteSlide autoHeight customFooter">
+  <div class="content">
+    <div class="container">
+      <div class="wrap">
 
-	<!-- Slide 2 (#56) -->
-	<section class="slide whiteSlide" style="background: rgba(246, 247, 249, 0.64);">
-		<div class="content">
-			<div class="container" style="height: auto !important;margin-top: 5%;">
-				<div class="container-lg">
-					<div class="fix-12-12">
-						<ul class="grid fixedSpaces">
-							<li class="col-4-12 ae-3">
-								<h3 class="margin-bottom-1 text-blue">Stockholm</h3>
-								<p><a href="#">Heleneborgsgatan 54, 117 32 Stockholm</a></p>
-								<h3 class="margin-bottom-1 text-blue">Helsingborg</h3>
-								<p><a href="#">Filialkontor i Helsingborg:</a></p>
-							</li>
-							<li class="col-4-12 ae-3">
-								<h3 class="margin-bottom-1 text-blue">Göteborg</h3>
-								<p><a href="#">Filialkontor i Göteborg:</a></p>
-								<h3 class="margin-bottom-1 text-blue">Norrköping</h3>
-								<p><a href="#">Filialkontor i Norrköping:</a></p>
-								<h3 class="margin-bottom-1 text-blue">Uppsala</h3>
-								<p><a href="#">Filialkontor i Uppsala:</a></p>
-							</li>
-							<li class="col-4-12 ae-5">
-								<h3 class="margin-bottom-1 text-blue">Besiktningsbloggen</h3>
-								<p><a href="https://medium.com/besiktningsbloggen">Läs vår spännande resa i att utveckla och förnya byggbranschen</a></p>
-								<h3 class="margin-bottom-1 text-blue">Följ gärna oss</h3>
-								<ul class="social-circles">
-									<li><a class="button roundButton facebook" href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#facebook"></use></svg></a></li>
-									<li><a class="button roundButton twitter" href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use></svg></a></li>
-									<li><a class="button roundButton linkedin" href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#linkedin"></use></svg></a></li>
-								</ul>
-							</li>
-						</ul>
-					</div>
+        <ul class="grid fixedSpaces left">
+          <li class="col-5-10 wide-col ae-3">
+            <a href="/" class="logo"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width: 250px;"></a>
+          </li>
+          <li class="col-5-10 ae-3">
+            <h3 class="margin-bottom-1">Kontor</h3>
+            <p class="small"><a href="#">Stockholm</a></p>
+            <p class="small"><a href="#">Helsingborg</a></p>
+            <p class="small"><a href="#">Göteborg</a></p>
+            <p class="small"><a href="#">Norrköping</a></p>
+            <p class="small"><a href="#">Uppsala</a></p>
+          </li>
+          <li class="col-5-10 ae-3">
+            <h3 class="margin-bottom-1">Se mer</h3>
+            <p class="small"><a href="#">Om oss</a></p>
+            <p class="small"><a href="#">Karriär</a></p>
+            <p class="small"><a href="#">Nyheter</a></p>
+            <p class="small"><a href="#">Vårt erbjudande</a></p>
+						<p class="small"><a href="#">Kontakt</a></p>
+          </li>
+          <li class="col-5-10 ae-4">
+            <h3 class="margin-bottom-1">Länkar</h3>
+            <p class="small"><a href="mailto:#">Konsumentverket</a></p>
+            <p class="small"><a href="#">Svenska byggingenjörers riksförbund</a></p>
+            <p class="small"><a href="#">Boverket - byggregler</a></p>
+            <p class="small"><a href="#">Svensk byggtjänst - bygglitteratur</a></p>
+            <p class="small"><a href="#">Mäklarsamfundet</a></p>
+          </li>
+          <li class="col-5-10 ae-5">
+            <h3 class="margin-bottom-1">Följ oss</h3>
+            <p class="small"><a href="#">Besiktningsbloggen</a></p>
+            <p class="small"><a href="#">Twitter</a></p>
+            <p class="small"><a href="#">Facebook</a></p>
+            <p class="small"><a href="#">Linkedin</a></p>
+          </li>
+        </ul>
 
-				</div>
-			</div>
-		</div>
-	</section>
+      </div>
+    </div>
+  </div>
+</section>
 
 <!-- Popup Text -->
 <div class="popup animated" data-popup-id="text">
