--- a/index.html
+++ b/index.html
@@ -253,14 +253,14 @@
 		    </div>
 		  </div>
 		</section>
-<section class="slide fade whiteSlide autoHeight customFooter">
+<section class="slide fade autoHeight customFooter">
   <div class="content">
     <div class="container">
       <div class="wrap">
 
         <ul class="grid fixedSpaces left">
           <li class="col-5-10 wide-col ae-3">
-            <a href="/" class="logo"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width: 250px;"></a>
+            <a href="/" class="logo"><img src="../assets/svg/bm_logo_white.svg" alt="Besiktningsman.se" style="width: 250px;"></a>
           </li>
           <li class="col-5-10 ae-3">
             <h3 class="margin-bottom-1">Kontor</h3>
