--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 		    </div>
 		  </div>
 		</section>
-<section class="slide fade autoHeight customFooter">
+<section class="slide blue autoHeight customFooter">
   <div class="content">
     <div class="container">
       <div class="wrap">
