--- a/karriar/index.html
+++ b/karriar/index.html
@@ -220,7 +220,7 @@
   </div>
 </section>
 
-<section class="slide fade whiteSlide autoHeight customFooter">
+<section class="slide blue whiteSlide autoHeight customFooter">
   <div class="content">
     <div class="container">
       <div class="wrap">
