--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -210,7 +210,7 @@
   <div class="background" style="background-image:url(../assets/img/backgrounds/ispect_close.jpg)"></div>
 </section>
 
-<section class="slide fade whiteSlide autoHeight customFooter">
+<section class="slide blue whiteSlide autoHeight customFooter">
   <div class="content">
     <div class="container">
       <div class="wrap">
