--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -763,7 +763,7 @@
     </div>
   </div>
 </section>
-<section class="slide fade whiteSlide autoHeight customFooter">
+<section class="slide blue whiteSlide autoHeight customFooter">
   <div class="content">
     <div class="container">
       <div class="wrap">
