--- a/foretag/index.html
+++ b/foretag/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Besiktningsman.se</title>
+	<title>Besiktningsman.se | Kontakt</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
@@ -25,23 +25,22 @@
     <meta property="og:title" content="Besiktningsman.se | Vi utvecklar och förnyar">
     <meta property="og:description" content="#yourdescription">
     <meta property="og:url" content="#yourlink">
-    <meta property="og:site_name" content="icontrol app">
+    <meta property="og:site_name" content="besiktningsman.se">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<!-- Fonts and Material Icons -->
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700|Material+Icons" rel="stylesheet" type="text/css" />
 
 
 	<!-- Styles -->
-	<link href="css/slides.css" rel="stylesheet" type="text/css">
+	<link href="../css/slides.css" rel="stylesheet" type="text/css">
 
 	<!-- Custom Styles -->
 	<!--link href="css/custom.css" rel="stylesheet" type="text/css"-->
 
 	<!-- Scripts -->
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-	<script src="js/plugins.js" type="text/javascript" name="plugins"></script>
-	<script src="js/slides.js" type="text/javascript" name="main-scripts"></script>
-
+	<script src="../js/plugins.js" type="text/javascript" name="plugins"></script>
+	<script src="../js/slides.js" type="text/javascript" name="main-scripts"></script>
 	<!-- Custom Scripts -->
 	<!--script src="js/custom.js" type="text/javascript" name="custom-scripts"></script-->
 
@@ -127,23 +126,23 @@
   <div class="sections desktop">
     <div class="left">
       <ul class="menu crop small bold">
-        <li><a href="#">Vårt erbjudande</a></li>
-        <li><a href="nyheter/">Nyheter</a></li>
-        <li><a href="karriar/">Karriär</a></li>
+        <li><a href="../erbjudande/">Vårt erbjudande</a></li>
+        <li><a href="../nyheter/">Nyheter</a></li>
+        <li><a href="../karriar/">Karriär</a></li>
       </ul>
     </div>
-    <div class="center"><a href="/"> <img src="assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;">  </a></div>
+    <div class="center"><a href="/"> <img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;">  </a></div>
     <div class="right">
       <ul class="menu crop small bold">
-        <li><a href="om_oss/">Om oss</a></li>
-        <li><a href="kontakt/">Kontakt</a></li>
-        <li><a href="#">Mer</a></li>
+        <li><a href="../om_oss/">Om oss</a></li>
+        <li><a href="../kontakt/">Kontakt</a></li>
+        <li><a href="../mer/">Mer</a></li>
         <li><a href="http://medium.com/besiktningsbloggen">Blog</a></li>
       </ul>
     </div>
   </div>
   <div class="sections compact hidden">
-    <div class="left"><a href="/"><img src="assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"></a></div>
+    <div class="left"><a href="/"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"></a></div>
     <div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
   </div>
 </nav>
@@ -152,115 +151,74 @@
 <nav class="sidebar white" data-sidebar-id="1">
   <div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
   <div class="content">
-    <a href="/" class="logo"><img src="assets/svg/bm_logo.svg" alt=""></a>
+    <a href="/" class="logo"><img src="../assets/svg/bm_logo.svg" alt=""></a>
     <ul class="mainMenu text-blue">
-      <li><a href="#">Vårt erbjudande</a></li>
+      <li><a href="../erbjudande/">Vårt erbjudande</a></li>
 			<br>
 			<br>
-      <li><a href="kontakt/">Kontakt</a></li>
+      <li><a href="../kontakt/">Kontakt</a></li>
 			<br>
 			<br>
-			<li><a href="#">Karriär</a></li>
+			<li><a href="../karriar/">Karriär</a></li>
 			<br>
 			<br>
-      <li><a href="om_oss/">Om oss</a></li>
+      <li><a href="../om_oss/">Om oss</a></li>
 			<br>
 			<br>
     </ul>
     <ul class="subMenu">
-			<li><a href="#">Mer</a></li>
+			<li><a href="../mer/">Mer</a></li>
 			<br>
 			<br>
-      <li><a href="#">Blog</a></li>
+      <li><a href="http://medium.com/besiktningsbloggen">Blog</a></li>
 			<br>
 			<br>
-			<li><a href="#">Nyheter</a></li>
+			<li><a href="../nyheter/">Nyheter</a></li>
     </ul>
 
   </div>
 </nav>
 
 	<!-- INTRO SLIDE -->
-	<section class="slide fade kenBurns zoomout" data-name="home" id="intro">
-		<div class="content">
-			<div class="container" style="height: 760px;">
-				<div class="wrap">
-
-					<div class="fix-10-12">
-						<h1 class="hero-title">Välkommen till Besiktningsman.se</h1>
-						<p class="hero">Digital besiktning för lönsammare byggprojekt</p>
-						<a href="/foretag/" class="common-Button white text-blue ae-5 fromCenter" style="margin-right: 20px;">FÖRETAG</a><a href="/brf_privat/" class="common-Button white ae-6 fromCenter">BRF / PRIVAT</a>
-					</div>
-
-				</div>
-			</div>
-		</div>
-		<div class="background" style="background-image:url(assets/img/backgrounds/ispect_close.jpg)"></div>
-	</section>
-<!-- E-besiktning SLIDE -->
+	<!-- Slide #55 -->
+<section class="slide fade kenBurns" id="">
+  <div class="content">
+    <div class="container" style="height: 460px;">
+      <div class="wrap">
+        <div class="fix-10-12">
+					<h1 class="hero-title">Nyheter från Besiktningsman.se</h1>
+        </div>
+      </div>
+    </div>
+  </div>
+	<div class="background" style="background-image:url(../assets/img/backgrounds/typer.jpg)"></div>
 </section>
-		<section class="slide whiteSlide kenBurns fromLeft">
-		  <div class="content">
-		    <div class="container" style="height: 100% !important;">
-		      <div class="wrap" style="display: block;">
+<!-- Slide #81 -->
+<section class="slide fade kenBurns whiteSlide">
+  <div class="content">
+    <div class="container">
+      <div class="wrap">
 
-		        <div class="fix-12-12">
-		          <ul class="flex reverse">
-		            <li class="col-6-12 left cell-32">
-		              <h1 class="ae-2">Entreprenadbesiktning som ökar lönsamheten.</h1>
-									<div class="ae-3"><p>Besiktningsman.se erbjuder för entreprenadbesiktning som ger ett aktivt stöd för sänkt kostnad och ökad lönsamhet i projekt.
-									<br> Ger möjlighet att överlämna ett färdigt projekt med noll byggfel på avtalad dag.</p></div>
-		            </li>
-		            <li class="col-6-12 left ae-1 fromRight">
-		              <img class="ipad-32" data-action="zoom" style="width: 1000px;" src="assets/img/ispect/stats.png" alt="iPad Image"/>
-		            </li>
-		          </ul>
-		        </div>
+        <div class="fix-10-12">
+          <h1 class="ae-1 fromLeft left">Bostadsforum 2017</h1>
+          <div class="ae-2 fromLeft left">
+            <p>Vi var på Bostadsforum i år igen och det var fantastiskt trevligt att få träffa samtliga under mässan! Hoppas på ett lika lyckat Bostadsforum 2018.</p>
+						<img src="../assets/img/nyheter/bostadsforum17.jpg" alt="">
+          </div>
+        </div>
+      </div>
 
-		      </div>
-		    </div>
-		  </div>
-		</section>
-		<!-- iSpect pros slide -->
-		<section class="slide whiteSlide kenBurns fromLeft">
-		  <div class="content">
-		    <div class="container" style="height: 100% !important;">
-		      <div class="wrap" style="display: block;">
-
-		        <div class="fix-12-12">
-		          <ul class="flex reverse">
-		            <li class="col-6-12 left cell-32">
-		              <h1 class="ae-2">iSpect ger snabb leverans av besiktningsutlåtandet.</h1>
-									<div class="ae-3"><p>Direkt felavhjälpning, lättillgänglig och säker dokumentation samt noll byggfel.</p></div>
-		              <ul class="items-32">
-		                <li class="fix-4-12 toLeft text-32">
-		                  <h3 class="ae-4">Exempel 1</h3>
-		                  <div class="ae-5"><p class="small">Tillåter underentreprenörer att avhjälpa fel samma dag</p></div>
-		                </li>
-		                <li class="fix-4-12 toLeft text-32">
-		                  <h3 class="ae-6">Exempel 2</h3>
-		                  <div class="ae-7"><p class="small">Skapar transparens i kommunikationen</p></div>
-		                </li>
-		              </ul>
-		            </li>
-		            <li class="col-6-12 left ae-1 fromRight">
-		              <img class="ipad-32" data-action="zoom" style="width: 500px;" src="assets/img/ispect/ipadfront.png" alt="iPad Image"/>
-		            </li>
-		          </ul>
-		        </div>
-
-		      </div>
-		    </div>
-		  </div>
-		</section>
-<section class="slide blue autoHeight customFooter">
+    </div>
+  </div>
+</section>
+<section class="slide blue whiteSlide autoHeight customFooter">
   <div class="content">
     <div class="container">
       <div class="wrap">
 
         <ul class="grid fixedSpaces left">
           <li class="col-5-10 wide-col ae-3">
-            <a href="/" class="logo"><img src="../assets/svg/bm_logo_white.svg" alt="Besiktningsman.se" style="width: 250px;"></a>
+            <a href="/" class="logo"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width: 250px;"></a>
           </li>
           <li class="col-5-10 ae-3">
             <h3 class="margin-bottom-1">Kontor</h3>
