--- a/erbjudande/index.html
+++ b/erbjudande/index.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-	<title>Besiktningsman.se | Kontakt</title>
+	<title>Besiktningsman.se | Erbjudande</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="keywords" content="besiktningar, syner, bygg, entreprenad, ncc, skanska, jm, icontrol, icontrolapp.se, entreprenör, byggentreprenör, noteringar, dokument, ritningar, projekt, app, byggapp, iphone, ipad, selling solutions, fallstudie, lösningar, en app för byggentreprenörer, översikt, samlingsplats, ispect, ispect-portal, återrapportering, rapportering, felnotering, bygglösningar, lean production, lean startup, startup, construction, industri, besiktning, besiktiga, besikta, entreprenadbesiktning, besiktningsman, fieldlens, fieldwire, plangrid, ritningsapp, i control app, icontroll, icontrollapp, ikontrol, kontroll, arbetsledare, platschef, entreprenadingenjör, bygg app, lean bygg, projekthantering, kommunikation, ireport,">
+	<meta name="keywords" content="besiktningar, syner, bygg, entreprenad, ncc, skanska, jm, icontrol, icontrolapp.se, entreprenör, byggentreprenör, noteringar, dokument, ritningar, projekt, app, byggapp, iphone, ipad, selling solutions, fallstudie, lösningar, en app för byggentreprenörer, översikt, samlingsplats, ispect, ispect-portal, återrapportering, rapportering, felnotering, bygglösningar, lean production, lean startup, startup, construction, industri, besiktning, besiktiga, besikta, entreprenadbesiktning, besiktningsman, fieldlens, fieldwire, plangrid, ritningsapp, i control app, icontroll, icontrollapp, ikontrol, kontroll, arbetsledare, platschef, entreprenadingenjör, bygg app, lean bygg, projekthantering, kommunikation, ireport,">
 	<!-- Page Title -->
 	<meta name="description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
 	<meta name="robots" content="noodp" />
@@ -20,13 +20,13 @@
 	<meta name="twitter:card" content="summary" />
 	<meta name="twitter:description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
 	<meta name="twitter:title" content="Certifierad &amp; oberoende besiktningsman för fastighet &amp; utemiljö" />
-    <!-- Making the website social media friendly-->
-    <meta property="og:image" content="#image">
-    <meta property="og:title" content="Besiktningsman.se | Vi utvecklar och förnyar">
-    <meta property="og:description" content="#yourdescription">
-    <meta property="og:url" content="#yourlink">
-    <meta property="og:site_name" content="besiktningsman.se">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<!-- Making the website social media friendly-->
+	<meta property="og:image" content="#image">
+	<meta property="og:title" content="Besiktningsman.se | Vi utvecklar och förnyar">
+	<meta property="og:description" content="#yourdescription">
+	<meta property="og:url" content="#yourlink">
+	<meta property="og:site_name" content="besiktningsman.se">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<!-- Fonts and Material Icons -->
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700|Material+Icons" rel="stylesheet" type="text/css" />
 
@@ -121,142 +121,161 @@
 
 </svg>
 
-<!-- Panel Top #10 -->
-<nav class="panel top forceMobileView white soft-shadow">
-  <div class="sections desktop">
-    <div class="left">
-      <ul class="menu crop small bold">
-        <li><a href="../erbjudande/">Vårt erbjudande</a></li>
-        <li><a href="../nyheter/">Nyheter</a></li>
-        <li><a href="../karriar/">Karriär</a></li>
-      </ul>
-    </div>
-    <div class="center"><a href="/"> <img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;">  </a></div>
-    <div class="right">
-      <ul class="menu crop small bold">
-        <li><a href="../om_oss/">Om oss</a></li>
-        <li><a href="../kontakt/">Kontakt</a></li>
-        <li><a href="../mer/">Mer</a></li>
-        <li><a href="http://medium.com/besiktningsbloggen">Blog</a></li>
-      </ul>
-    </div>
-  </div>
-  <div class="sections compact hidden">
-    <div class="left"><a href="/"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"></a></div>
-    <div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
-  </div>
-</nav>
+	<!-- Panel Top #10 -->
+	<nav class="panel top forceMobileView white soft-shadow">
+		<div class="sections desktop">
+			<div class="left">
+				<ul class="menu crop small bold">
+					<li><a href="../erbjudande/">Vårt erbjudande</a></li>
+					<li><a href="../nyheter/">Nyheter</a></li>
+					<li><a href="../karriar/">Karriär</a></li>
+				</ul>
+			</div>
+			<div class="center">
+				<a href="/"> <img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"> </a>
+			</div>
+			<div class="right">
+				<ul class="menu crop small bold">
+					<li><a href="../om_oss/">Om oss</a></li>
+					<li><a href="../kontakt/">Kontakt</a></li>
+					<li><a href="../mer/">Mer</a></li>
+					<li><a href="http://medium.com/besiktningsbloggen">Blog</a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="sections compact hidden">
+			<div class="left">
+				<a href="/"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"></a>
+			</div>
+			<div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
+		</div>
+	</nav>
 
-<!-- Sidebar -->
-<nav class="sidebar white" data-sidebar-id="1">
-  <div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
-  <div class="content">
-    <a href="/" class="logo"><img src="../assets/svg/bm_logo.svg" alt=""></a>
-    <ul class="mainMenu text-blue">
-      <li><a href="../erbjudande/">Vårt erbjudande</a></li>
-			<br>
-			<br>
-      <li><a href="../kontakt/">Kontakt</a></li>
-			<br>
-			<br>
-			<li><a href="../karriar/">Karriär</a></li>
-			<br>
-			<br>
-      <li><a href="../om_oss/">Om oss</a></li>
-			<br>
-			<br>
-    </ul>
-    <ul class="subMenu">
-			<li><a href="../mer/">Mer</a></li>
-			<br>
-			<br>
-      <li><a href="http://medium.com/besiktningsbloggen">Blog</a></li>
-			<br>
-			<br>
-			<li><a href="../nyheter/">Nyheter</a></li>
-    </ul>
+	<!-- Sidebar -->
+	<nav class="sidebar white" data-sidebar-id="1">
+		<div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
+		<div class="content">
+			<a href="/" class="logo"><img src="../assets/svg/bm_logo.svg" alt=""></a>
+			<ul class="mainMenu text-blue">
+				<li><a href="../erbjudande/">Vårt erbjudande</a></li>
+				<br>
+				<br>
+				<li><a href="../kontakt/">Kontakt</a></li>
+				<br>
+				<br>
+				<li><a href="../karriar/">Karriär</a></li>
+				<br>
+				<br>
+				<li><a href="../om_oss/">Om oss</a></li>
+				<br>
+				<br>
+			</ul>
+			<ul class="subMenu">
+				<li><a href="../mer/">Mer</a></li>
+				<br>
+				<br>
+				<li><a href="http://medium.com/besiktningsbloggen">Blog</a></li>
+				<br>
+				<br>
+				<li><a href="../nyheter/">Nyheter</a></li>
+			</ul>
 
-  </div>
-</nav>
+		</div>
+	</nav>
 
 	<!-- INTRO SLIDE -->
 	<!-- Slide #55 -->
-<section class="slide fade kenBurns" id="">
-  <div class="content">
-    <div class="container" style="height: 460px;">
-      <div class="wrap">
-        <div class="fix-10-12">
-					<h1 class="hero-title">Nyheter från Besiktningsman.se</h1>
-        </div>
-      </div>
-    </div>
-  </div>
-	<div class="background" style="background-image:url(../assets/img/backgrounds/typer.jpg)"></div>
-</section>
-<!-- Slide #81 -->
-<section class="slide fade kenBurns whiteSlide">
-  <div class="content">
-    <div class="container">
-      <div class="wrap">
-
-        <div class="fix-10-12">
-          <h1 class="ae-1 fromLeft left">Bostadsforum 2017</h1>
-          <div class="ae-2 fromLeft left">
-            <p>Vi var på Bostadsforum i år igen och det var fantastiskt trevligt att få träffa samtliga under mässan! Hoppas på ett lika lyckat Bostadsforum 2018.</p>
-						<img src="../assets/img/nyheter/bostadsforum17.jpg" alt="">
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </div>
-</section>
-<section class="slide blue whiteSlide autoHeight customFooter">
+	<section class="slide fade kenBurns" id="">
+		<div class="content">
+			<div class="container" style="height: 460px;">
+				<div class="wrap">
+					<div class="fix-10-12">
+						<h1 class="hero-title">Vårt erbjudande</h1>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="background" style="background-image:url(../assets/img/backgrounds/typer.jpg)"></div>
+	</section>
+<!-- Slide #32 -->
+<section class="slide whiteSlide kenBurns fromLeft">
   <div class="content">
     <div class="container">
       <div class="wrap">
 
-        <ul class="grid fixedSpaces left">
-          <li class="col-5-10 wide-col ae-3">
-            <a href="/" class="logo"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width: 250px;"></a>
-          </li>
-          <li class="col-5-10 ae-3">
-            <h3 class="margin-bottom-1">Kontor</h3>
-            <p class="small"><a href="#">Stockholm</a></p>
-            <p class="small"><a href="#">Helsingborg</a></p>
-            <p class="small"><a href="#">Göteborg</a></p>
-            <p class="small"><a href="#">Norrköping</a></p>
-            <p class="small"><a href="#">Uppsala</a></p>
-          </li>
-          <li class="col-5-10 ae-3">
-            <h3 class="margin-bottom-1">Se mer</h3>
-            <p class="small"><a href="#">Om oss</a></p>
-            <p class="small"><a href="#">Karriär</a></p>
-            <p class="small"><a href="#">Nyheter</a></p>
-            <p class="small"><a href="#">Vårt erbjudande</a></p>
-						<p class="small"><a href="#">Kontakt</a></p>
-          </li>
-          <li class="col-5-10 ae-4">
-            <h3 class="margin-bottom-1">Länkar</h3>
-            <p class="small"><a href="mailto:#">Konsumentverket</a></p>
-            <p class="small"><a href="#">Svenska byggingenjörers riksförbund</a></p>
-            <p class="small"><a href="#">Boverket - byggregler</a></p>
-            <p class="small"><a href="#">Svensk byggtjänst - bygglitteratur</a></p>
-            <p class="small"><a href="#">Mäklarsamfundet</a></p>
-          </li>
-          <li class="col-5-10 ae-5">
-            <h3 class="margin-bottom-1">Följ oss</h3>
-            <p class="small"><a href="#">Besiktningsbloggen</a></p>
-            <p class="small"><a href="#">Twitter</a></p>
-            <p class="small"><a href="#">Facebook</a></p>
-            <p class="small"><a href="#">Linkedin</a></p>
-          </li>
-        </ul>
+        <div class="fix-12-12">
+          <ul class="flex reverse">
+            <li class="col-6-12 left cell-32">
+              <h1 class="h1 small">ENTREPRENADBESIKTNING NYPRODUKTION OCH ROT</h1>
+							<h2>Noll byggfel med iSpect</h2>
+              <div class="ae-3"><p>What problem have you solved, ever, that was worth solving where you knew all the given information in&nbsp;advance?</p></div>
+              <ul class="items-32">
+                <li class="fix-4-12 toLeft text-32">
+                  <h3 class="ae-4">Fashion</h3>
+                  <div class="ae-5"><p class="small">För nyproduktion och ROT erbjuder vi en komplett digital besiktningsprocess med iSpect.</p></div>
+                </li>
+                <li class="fix-4-12 toLeft text-32">
+                  <h3 class="ae-6">Creativity</h3>
+                  <div class="ae-7"><p class="small">Clear thinking at the wrong moment can stifle creativity.</p></div>
+                </li>
+              </ul>
+            </li>
+            <li class="col-6-12 left ae-1 fromRight">
+              <img class="ipad-32 soft-shadow" data-action="zoom" width="1200" src="../assets/img/backgrounds/nyc_bridge.png" alt="iPad Image"/>
+            </li>
+          </ul>
+        </div>
 
       </div>
     </div>
   </div>
 </section>
+	<section class="slide blue whiteSlide autoHeight customFooter">
+		<div class="content">
+			<div class="container">
+				<div class="wrap">
+
+					<ul class="grid fixedSpaces left">
+						<li class="col-5-10 wide-col ae-3">
+							<a href="/" class="logo"><img src="../assets/svg/bm_logo_white.svg" alt="Besiktningsman.se" style="width: 250px;"></a>
+						</li>
+						<li class="col-5-10 ae-3">
+							<h3 class="margin-bottom-1">Kontor</h3>
+							<p class="small"><a href="#">Stockholm</a></p>
+							<p class="small"><a href="#">Helsingborg</a></p>
+							<p class="small"><a href="#">Göteborg</a></p>
+							<p class="small"><a href="#">Norrköping</a></p>
+							<p class="small"><a href="#">Uppsala</a></p>
+						</li>
+						<li class="col-5-10 ae-3">
+							<h3 class="margin-bottom-1">Se mer</h3>
+							<p class="small"><a href="#">Om oss</a></p>
+							<p class="small"><a href="#">Karriär</a></p>
+							<p class="small"><a href="#">Nyheter</a></p>
+							<p class="small"><a href="#">Vårt erbjudande</a></p>
+							<p class="small"><a href="#">Kontakt</a></p>
+						</li>
+						<li class="col-5-10 ae-4">
+							<h3 class="margin-bottom-1">Länkar</h3>
+							<p class="small"><a href="mailto:#">Konsumentverket</a></p>
+							<p class="small"><a href="#">Svenska byggingenjörers riksförbund</a></p>
+							<p class="small"><a href="#">Boverket - byggregler</a></p>
+							<p class="small"><a href="#">Svensk byggtjänst - bygglitteratur</a></p>
+							<p class="small"><a href="#">Mäklarsamfundet</a></p>
+						</li>
+						<li class="col-5-10 ae-5">
+							<h3 class="margin-bottom-1">Följ oss</h3>
+							<p class="small"><a href="#">Besiktningsbloggen</a></p>
+							<p class="small"><a href="#">Twitter</a></p>
+							<p class="small"><a href="#">Facebook</a></p>
+							<p class="small"><a href="#">Linkedin</a></p>
+						</li>
+					</ul>
+
+				</div>
+			</div>
+		</div>
+	</section>
 
 	<!-- Email Form Dialog -->
 	<div class="dialog hidden" data-dialog-id="form" data-on-submit-acton="close" data-set-cookie="30">
