basic layout for Services page created

--- a/erbjudande/index.html
+++ b/erbjudande/index.html
@@ -195,7 +195,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="background" style="background-image:url(../assets/img/backgrounds/typer.jpg)"></div>
+		<div class="background" style="background-image:url(../assets/img/backgrounds/notes.jpg)"></div>
 	</section>
 <!-- Slide #32 -->
 <section class="slide whiteSlide kenBurns fromLeft">
@@ -206,22 +206,85 @@
         <div class="fix-12-12">
           <ul class="flex reverse">
             <li class="col-6-12 left cell-32">
-              <h1 class="h1 small">ENTREPRENADBESIKTNING NYPRODUKTION OCH ROT</h1>
-							<h2>Noll byggfel med iSpect</h2>
-              <div class="ae-3"><p>What problem have you solved, ever, that was worth solving where you knew all the given information in&nbsp;advance?</p></div>
+              <h1 class="">Entreprenadbesiktning för nyproduktion och ROT</h1>
+              <div class="ae-3"><p>Intro text What problem have you solved, ever, that was worth solving where you knew all the given information in&nbsp;advance?</p></div>
               <ul class="items-32">
                 <li class="fix-4-12 toLeft text-32">
-                  <h3 class="ae-4">Fashion</h3>
+                  <h3 class="ae-4">Exempel 1</h3>
                   <div class="ae-5"><p class="small">För nyproduktion och ROT erbjuder vi en komplett digital besiktningsprocess med iSpect.</p></div>
                 </li>
                 <li class="fix-4-12 toLeft text-32">
-                  <h3 class="ae-6">Creativity</h3>
+                  <h3 class="ae-6">Exempel 2</h3>
                   <div class="ae-7"><p class="small">Clear thinking at the wrong moment can stifle creativity.</p></div>
                 </li>
               </ul>
             </li>
             <li class="col-6-12 left ae-1 fromRight">
-              <img class="ipad-32 soft-shadow" data-action="zoom" width="1200" src="../assets/img/backgrounds/nyc_bridge.png" alt="iPad Image"/>
+              <img class="macbook-62 margin-bottom-3" data-action="zoom" width="1000" src="../assets/img/backgrounds/work.jpg" alt="iPad Image"/>
+            </li>
+          </ul>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</section>
+<section class="slide whiteSlide kenBurns fromRight">
+  <div class="content">
+    <div class="container">
+      <div class="wrap">
+
+        <div class="fix-12-12">
+          <ul class="flex reverse">
+            <li class="col-6-12 left ae-1 fromLeft">
+              <img class="macbook-61 margin-bottom-3" data-action="zoom" width="1000" src="../assets/img/backgrounds/brf.jpg" alt="iPad Image"/>
+            </li>
+            <li class="col-6-12 left cell-32">
+              <h1 class="">Besiktningstjänster för bostadsrättsföreningar</h1>
+              <div class="ae-3"><p>Besiktningsman.se erbjuder tjänster och besiktningsmän för samtliga fack för besiktning av nyproduktion och ROT-arbeten i bostadrättsfastigheter, samt KA-ansvariga</p></div>
+              <ul class="items-32">
+                <li class="fix-4-12 toLeft text-32">
+                  <h3 class="ae-4">Exempel 1</h3>
+                  <div class="ae-5"><p class="small">För nyproduktion och ROT erbjuder vi en komplett digital besiktningsprocess med iSpect.</p></div>
+                </li>
+                <li class="fix-4-12 toLeft text-32">
+                  <h3 class="ae-6">Exempel 2</h3>
+                  <div class="ae-7"><p class="small">Clear thinking at the wrong moment can stifle creativity.</p></div>
+                </li>
+              </ul>
+            </li>
+
+          </ul>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+</section>
+<section class="slide whiteSlide kenBurns fromLeft">
+  <div class="content">
+    <div class="container">
+      <div class="wrap">
+
+        <div class="fix-12-12">
+          <ul class="flex reverse">
+            <li class="col-6-12 left cell-32">
+              <h1 class="">Besiktningstjänster för privatpersoner</h1>
+              <div class="ae-3"><p>Intro text What problem have you solved, ever, that was worth solving where you knew all the given information in&nbsp;advance?</p></div>
+              <ul class="items-32">
+                <li class="fix-4-12 toLeft text-32">
+                  <h3 class="ae-4">Exempel 1</h3>
+                  <div class="ae-5"><p class="small">För nyproduktion och ROT erbjuder vi en komplett digital besiktningsprocess med iSpect.</p></div>
+                </li>
+                <li class="fix-4-12 toLeft text-32">
+                  <h3 class="ae-6">Exempel 2</h3>
+                  <div class="ae-7"><p class="small">Clear thinking at the wrong moment can stifle creativity.</p></div>
+                </li>
+              </ul>
+            </li>
+            <li class="col-6-12 left ae-1 fromRight">
+              <img class="macbook-62 margin-bottom-3" data-action="zoom" width="1000" src="../assets/img/backgrounds/farmhouse.jpg" alt="iPad Image"/>
             </li>
           </ul>
         </div>
