bunch of footer link text changes

--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -238,9 +238,9 @@
           <li class="col-5-10 ae-4">
             <h3 class="margin-bottom-1">Länkar</h3>
             <p class="small"><a href="mailto:#">Konsumentverket</a></p>
-            <p class="small"><a href="#">Svenska byggingenjörers riksförbund</a></p>
+            <p class="small"><a href="#">SBR</a></p>
             <p class="small"><a href="#">Boverket - byggregler</a></p>
-            <p class="small"><a href="#">Svensk byggtjänst - bygglitteratur</a></p>
+            <p class="small"><a href="#">Svensk byggtjänst</a></p>
             <p class="small"><a href="#">Mäklarsamfundet</a></p>
           </li>
           <li class="col-5-10 ae-5">
