--- a/erbjudande/index.html
+++ b/erbjudande/index.html
@@ -220,7 +220,7 @@
               </ul>
             </li>
             <li class="col-6-12 left ae-1 fromRight">
-              <img class="macbook-62 margin-bottom-3" data-action="zoom" width="1000" src="../assets/img/backgrounds/work.jpg" alt="iPad Image"/>
+              <img class="macbook-62 margin-bottom-3 soft-shadow" data-action="zoom" width="1000" src="../assets/img/backgrounds/work.jpg" alt="iPad Image"/>
             </li>
           </ul>
         </div>
@@ -237,7 +237,7 @@
         <div class="fix-12-12">
           <ul class="flex reverse">
             <li class="col-6-12 left ae-1 fromLeft">
-              <img class="macbook-61 margin-bottom-3" data-action="zoom" width="1000" src="../assets/img/backgrounds/brf.jpg" alt="iPad Image"/>
+              <img class="macbook-61 margin-bottom-3 soft-shadow" data-action="zoom" width="1000" src="../assets/img/backgrounds/brf.jpg" alt="iPad Image"/>
             </li>
             <li class="col-6-12 left cell-32">
               <h1 class="">Besiktningstjänster för bostadsrättsföreningar</h1>
@@ -284,7 +284,7 @@
               </ul>
             </li>
             <li class="col-6-12 left ae-1 fromRight">
-              <img class="macbook-62 margin-bottom-3" data-action="zoom" width="1000" src="../assets/img/backgrounds/farmhouse.jpg" alt="iPad Image"/>
+              <img class="macbook-62 margin-bottom-3 soft-shadow" data-action="zoom" width="1000" src="../assets/img/backgrounds/farmhouse.jpg" alt="iPad Image"/>
             </li>
           </ul>
         </div>
@@ -321,9 +321,9 @@
 						<li class="col-5-10 ae-4">
 							<h3 class="margin-bottom-1">Länkar</h3>
 							<p class="small"><a href="mailto:#">Konsumentverket</a></p>
-							<p class="small"><a href="#">Svenska byggingenjörers riksförbund</a></p>
+							<p class="small"><a href="#">SBR</a></p>
 							<p class="small"><a href="#">Boverket - byggregler</a></p>
-							<p class="small"><a href="#">Svensk byggtjänst - bygglitteratur</a></p>
+							<p class="small"><a href="#">Svensk byggtjänst</a></p>
 							<p class="small"><a href="#">Mäklarsamfundet</a></p>
 						</li>
 						<li class="col-5-10 ae-5">
