landing page buttons direct links to services slides

--- a/erbjudande/index.html
+++ b/erbjudande/index.html
@@ -198,7 +198,7 @@
 		<div class="background" style="background-image:url(../assets/img/backgrounds/notes.jpg)"></div>
 	</section>
 <!-- Slide #32 -->
-<section class="slide whiteSlide kenBurns fromLeft">
+<section class="slide whiteSlide kenBurns fromLeft" data-name="foretag">
   <div class="content">
     <div class="container">
       <div class="wrap">
@@ -229,7 +229,7 @@
     </div>
   </div>
 </section>
-<section class="slide whiteSlide kenBurns fromRight">
+<section class="slide whiteSlide kenBurns fromRight" data-name="brf">
   <div class="content">
     <div class="container">
       <div class="wrap">
