--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 					<div class="fix-10-12">
 						<h1 class="hero-title">Välkommen till Besiktningsman.se</h1>
 						<p class="hero">Digital besiktning för lönsammare byggprojekt</p>
-						<a href="/foretag/" class="common-Button white text-blue ae-5 fromCenter" style="margin-right: 20px;">FÖRETAG</a><a href="/brf_privat/" class="common-Button white ae-6 fromCenter">BRF / PRIVAT</a>
+						<a href="erbjudande/#foretag" class="common-Button white text-blue ae-5 fromCenter" style="margin-right: 20px;">FÖRETAG</a><a href="erbjudande/#brf" class="common-Button white ae-6 fromCenter">BRF / PRIVAT</a>
 					</div>
 
 				</div>
