minor pic update on services

--- a/erbjudande/index.html
+++ b/erbjudande/index.html
@@ -220,7 +220,7 @@
               </ul>
             </li>
             <li class="col-6-12 left ae-1 fromRight">
-              <img class="macbook-62 margin-bottom-3 soft-shadow" data-action="zoom" width="1000" src="../assets/img/backgrounds/work.jpg" alt="iPad Image"/>
+              <img class="macbook-62 margin-bottom-3 soft-shadow" data-action="zoom" width="1000" src="../assets/img/backgrounds/goldengate.png" alt="iPad Image"/>
             </li>
           </ul>
         </div>
