updated nav links and buttons

--- a/erbjudande/index.html
+++ b/erbjudande/index.html
@@ -126,9 +126,9 @@
 		<div class="sections desktop">
 			<div class="left">
 				<ul class="menu crop small bold">
-					<li><a href="../erbjudande/">Vårt erbjudande</a></li>
+					<li><a href="../mer/">Mer</a></li>
+					<li><a href="http://medium.com/besiktningsbloggen">Blog</a></li>
 					<li><a href="../nyheter/">Nyheter</a></li>
-					<li><a href="../karriar/">Karriär</a></li>
 				</ul>
 			</div>
 			<div class="center">
@@ -136,10 +136,10 @@
 			</div>
 			<div class="right">
 				<ul class="menu crop small bold">
-					<li><a href="../om_oss/">Om oss</a></li>
-					<li><a href="../kontakt/">Kontakt</a></li>
-					<li><a href="../mer/">Mer</a></li>
-					<li><a href="http://medium.com/besiktningsbloggen">Blog</a></li>
+		      <li><a href="../erbjudande/">Vårt erbjudande</a></li>
+		      <li><a href="../kontakt/">Kontakt</a></li>
+		      <li><a href="../karriar/">Karriär</a></li>
+		      <li><a href="../om_oss/">Om oss</a></li>
 				</ul>
 			</div>
 		</div>
@@ -214,8 +214,11 @@
                   <div class="ae-5"><p class="small">För nyproduktion och ROT erbjuder vi en komplett digital besiktningsprocess med iSpect.</p></div>
                 </li>
                 <li class="fix-4-12 toLeft text-32">
-									<h3 class="ae-6">Exempel 2</h3>
+                  <h3 class="ae-6">Exempel 2</h3>
                   <div class="ae-7"><p class="small">Clear thinking at the wrong moment can stifle creativity.</p></div>
+                </li>
+								<li class="fix-4-12 toLeft text-32">
+									<a href="/kontakt/" class="blue common-Button">Vill du veta mer? Kontakta oss!</a>
 								</li>
               </ul>
             </li>
@@ -251,6 +254,9 @@
                   <h3 class="ae-6">Exempel 2</h3>
                   <div class="ae-7"><p class="small">Clear thinking at the wrong moment can stifle creativity.</p></div>
                 </li>
+								<li class="fix-4-12 toLeft text-32">
+									<a href="/kontakt/" class="blue common-Button">Kontakta oss för bokning</a>
+								</li>
               </ul>
             </li>
 
@@ -281,6 +287,9 @@
                   <h3 class="ae-6">Exempel 2</h3>
                   <div class="ae-7"><p class="small">Clear thinking at the wrong moment can stifle creativity.</p></div>
                 </li>
+								<li class="fix-4-12 toLeft text-32">
+									<a href="/kontakt/" class="blue common-Button">Kontakta oss för bokning</a>
+								</li>
               </ul>
             </li>
             <li class="col-6-12 left ae-1 fromRight">
