--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -126,9 +126,9 @@
 		<div class="sections desktop">
 			<div class="left">
 				<ul class="menu crop small bold">
-					<li><a href="../erbjudande/">Vårt erbjudande</a></li>
+					<li><a href="../mer/">Mer</a></li>
+					<li><a href="http://medium.com/besiktningsbloggen">Blog</a></li>
 					<li><a href="../nyheter/">Nyheter</a></li>
-					<li><a href="../karriar/">Karriär</a></li>
 				</ul>
 			</div>
 			<div class="center">
@@ -136,10 +136,10 @@
 			</div>
 			<div class="right">
 				<ul class="menu crop small bold">
-					<li><a href="../om_oss/">Om oss</a></li>
-					<li><a href="../kontakt/">Kontakt</a></li>
-					<li><a href="../mer/">Mer</a></li>
-					<li><a href="http://medium.com/besiktningsbloggen">Blog</a></li>
+		      <li><a href="../erbjudande/">Vårt erbjudande</a></li>
+		      <li><a href="../kontakt/">Kontakt</a></li>
+		      <li><a href="../karriar/">Karriär</a></li>
+		      <li><a href="../om_oss/">Om oss</a></li>
 				</ul>
 			</div>
 		</div>
@@ -186,10 +186,10 @@
 	<!-- Slide 1 (#19) -->
 	<section class="slide fade kenBurns" id="intro">
 		<div class="content">
-			<div class="container" style="height: 760px;">
+			<div class="container" style="">
 				<div class="wrap">
 					<h1>Vi på Besiktningsman.se</h1>
-					<p style="max-width: 50%;margin:0 auto;">Vi är ett fristående besiktningsföretag som utför besiktningar objektivt <br>och opartiskt enligt gällande bygg- och branschregler.</p>
+					<p style="margin:0 auto;">Vi är ett fristående besiktningsföretag som utför besiktningar objektivt <br>och opartiskt enligt gällande bygg- och branschregler.</p>
 				</div>
 
 			</div>
@@ -203,7 +203,7 @@
 			<div class="container-lg">
 				<div class="wrap">
 
-					<div class="fix-12-12">
+					<div class="fix-10-12">
 						<ul class="flex left">
 							<li class="col-10-12 fromBottomLeft">
 								<h1 class="ae-2">Sedan starten 2003 har vi utfört ett stort antal besiktningar åt såväl konsumenter som etablerade företag inom bygg och fastighet.</h1>
@@ -237,11 +237,11 @@
 			<div class="container-lg">
 				<div class="wrap left">
 
-					<div class="fix-12-12">
+					<div class="fix-10-12">
 						<h1 class="ae-1">Vilka vi är</h1>
 						<p class="bold">Ledning</p>
 					</div>
-					<div class="fix-12-12">
+					<div class="fix-10-12">
 						<!--  List one -->
 						<ul class="flex fixedSpaces later left margin-bottom-5">
 							<li class="col-3-12 col-tablet-1-2 ">
@@ -607,7 +607,7 @@
     <div class="container-lg">
       <div class="wrap">
 
-        <div class="fix-12-12 left">
+        <div class="fix-10-12 left">
           <h1 class="ae-1">Några av våra uppdragsgivare</h1>
           <p>Vi utför årligen ett stort antal besiktningar åt konsumenter som har byggt nytt eller renoverat såsom ägare till enskilda småhus eller är bostadsrättsinnehavare.</p>
 					<p>Småhustillverkare</p>
@@ -615,7 +615,7 @@
 					<p>Ett betydande antal företag inom bygg och fastighet.</p>
 					<p>Utför ett stort antal uppdrag åt advokatbyråer i samband med tvister.</p>
         </div>
-        <div class="fix-12-12">
+        <div class="fix-10-12">
           <!-- remove class tintLogos to disable color change of logo images -->
           <ul class="grid equal later">
             <li class="col-2-12">
@@ -714,10 +714,10 @@
     <div class="container-lg">
       <div class="wrap">
 
-        <div class="fix-12-12 toCenter left margin-bottom-5">
+        <div class="fix-10-12 toCenter left margin-bottom-5">
           <h1 class="ae-1">Samarbetspartners</h1>
         </div>
-        <div class="fix-12-12">
+        <div class="fix-10-12">
           <!-- remove class tintLogos to disable color change of logo images -->
           <ul class="grid">
             <li class="col-2-12">
