--- a/index.html
+++ b/index.html
@@ -127,18 +127,19 @@
   <div class="sections desktop">
     <div class="left">
       <ul class="menu crop small bold">
-        <li><a href="#">Vårt erbjudande</a></li>
-        <li><a href="nyheter/">Nyheter</a></li>
-        <li><a href="karriar/">Karriär</a></li>
+				<li><a href="#">Mer</a></li>
+				<li><a href="http://medium.com/besiktningsbloggen">Blog</a></li>
+				<li><a href="nyheter/">Nyheter</a></li>
+
       </ul>
     </div>
     <div class="center"><a href="/"> <img src="assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;">  </a></div>
     <div class="right">
       <ul class="menu crop small bold">
-        <li><a href="om_oss/">Om oss</a></li>
+        <li><a href="erbjudande/">Vårt erbjudande</a></li>
         <li><a href="kontakt/">Kontakt</a></li>
-        <li><a href="#">Mer</a></li>
-        <li><a href="http://medium.com/besiktningsbloggen">Blog</a></li>
+        <li><a href="karriar/">Karriär</a></li>
+        <li><a href="om_oss/">Om oss</a></li>
       </ul>
     </div>
   </div>
@@ -221,38 +222,55 @@
 		    </div>
 		  </div>
 		</section>
-		<!-- iSpect pros slide -->
-		<section class="slide whiteSlide kenBurns fromLeft">
-		  <div class="content">
-		    <div class="container" style="height: 100% !important;">
-		      <div class="wrap" style="display: block;">
+<!-- Slide #61 -->
+<section class="slide whiteSlide kenBurns">
+  <div class="content">
+    <div class="container">
+      <div class="wrap">
 
-		        <div class="fix-12-12">
-		          <ul class="flex reverse">
-		            <li class="col-6-12 left cell-32">
-		              <h1 class="ae-2">iSpect ger snabb leverans av besiktningsutlåtandet.</h1>
-									<div class="ae-3"><p>Direkt felavhjälpning, lättillgänglig och säker dokumentation samt noll byggfel.</p></div>
-		              <ul class="items-32">
-		                <li class="fix-4-12 toLeft text-32">
-		                  <h3 class="ae-4">Exempel 1</h3>
-		                  <div class="ae-5"><p class="small">Tillåter underentreprenörer att avhjälpa fel samma dag</p></div>
-		                </li>
-		                <li class="fix-4-12 toLeft text-32">
-		                  <h3 class="ae-6">Exempel 2</h3>
-		                  <div class="ae-7"><p class="small">Skapar transparens i kommunikationen</p></div>
-		                </li>
-		              </ul>
-		            </li>
-		            <li class="col-6-12 left ae-1 fromRight">
-		              <img class="ipad-32" data-action="zoom" style="width: 500px;" src="assets/img/ispect/ipadfront.png" alt="iPad Image"/>
-		            </li>
-		          </ul>
-		        </div>
+        <div class="fix-12-12">
+          <ul class="flex verticalCenter">
+            <li class="col-6-12 left ae-1">
+							<a href="#">
+								<img class="ipad-32" data-action="zoom" style="width: 500px;margin-bottom:5px;" src="assets/img/ispect/ipadfront.png" alt="iPad Image"/>
+							</a>
+            </li>
+            <li class="col-6-12 left">
+              <h1 class="ae-2">iSpect ger snabb leverans av besiktningsutlåtandet.</h1>
+              <div class="ae-3">
+                <p>Scene Generator allows you to create your own unique scenes just by dragging and dropping items into a special&nbsp;scene.</p>
+              </div>
+              <ul class="flex grid-61 later">
+                <li class="col-6-12 ae-4">
+                  <i class="material-icons">near_me</i>
+                  <h3>Mockup</h3>
+                  <p class="small">Select premade adjustment layers with ease.</p>
+                </li>
+                <li class="col-6-12 ae-5">
+                  <i class="material-icons">voice_chat</i>
+                  <h3>Layers</h3>
+                  <p class="small">Open a smart object, paste your design and save.</p>
+                </li>
+                <li class="col-6-12 ae-6">
+                  <i class="material-icons">account_box</i>
+                  <h3>Branding</h3>
+                  <p class="small">Just select a background, drop items that you like and finalize a scene.</p>
+                </li>
+                <li class="col-6-12 ae-7">
+                  <i class="material-icons">important_devices</i>
+                  <h3>Present</h3>
+                  <p class="small">Create unique items by pasting your design, text, logo or illustration.</p>
+                </li>
 
-		      </div>
-		    </div>
-		  </div>
-		</section>
+              </ul>
+            </li>
+          </ul>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</section>
 <section class="slide blue autoHeight customFooter">
   <div class="content">
     <div class="container">
