working on the two CTA cards on landing page

--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
         <div class="fix-12-12">
           <ul class="flex verticalCenter">
             <li class="col-6-12 left ae-1">
-							<a href="#">
-								<img class="ipad-32" data-action="zoom" style="width: 500px;margin-bottom:5px;" src="assets/img/ispect/ipadfront.png" alt="iPad Image"/>
+							<a href="">
+								<img class="ipad-32" style="width: 500px;margin-bottom:5px;" src="assets/img/ispect/ipadfront.png" alt="iPad Image"/>
 							</a>
             </li>
             <li class="col-6-12 left">
@@ -271,6 +271,19 @@
     </div>
   </div>
 </section>
+<section class="globalFooterCards">
+	<div class="container-lg">
+		<a href="#" class="globalFooterCard">
+			<img src="/assets/img/nyheter/nordbygg.jpg" alt="Nordbygg logo" class="left" width="200px;">
+			<p class="text-blue right">Möt oss på nordbygg</p>
+		</a>
+		<a href="#" class="globalFooterCard">
+			<img src="/assets/img/nyheter/nordbygg.jpg" alt="Nordbygg logo" class="left" width="200px;">
+			<p class="text-blue right">Möt oss på nordbygg</p>
+		</a>
+	</div>
+</section>
+
 <section class="slide blue autoHeight customFooter">
   <div class="content">
     <div class="container">
