adding cta card css

--- a/index.html
+++ b/index.html
@@ -271,16 +271,15 @@
     </div>
   </div>
 </section>
+
 <section class="globalFooterCards">
-	<div class="container-lg">
-		<a href="#" class="globalFooterCard">
-			<img src="/assets/img/nyheter/nordbygg.jpg" alt="Nordbygg logo" class="left" width="200px;">
-			<p class="text-blue right">Möt oss på nordbygg</p>
-		</a>
-		<a href="#" class="globalFooterCard">
-			<img src="/assets/img/nyheter/nordbygg.jpg" alt="Nordbygg logo" class="left" width="200px;">
-			<p class="text-blue right">Möt oss på nordbygg</p>
-		</a>
+	<div style="max-width: 1040px;" class="container-xl">
+		<a href="/pris/" class="common-Link globalFooterCard soft-shadow white">
+			<h2 style="max-width: 66.667%;" class="text-blue bold"> Möt oss på nordbygg!</h2>
+			<img src="/assets/img/nyheter/nordbygg.jpg" />
+		<a href="/om-icontrol/" style="margin-left: 10px;" class="common-Link globalFooterCard soft-shadow white">
+			<h2 style="max-width: 66.667%;" class="text-blue bold"> Senaste senaste</h2>
+			<img src="/assets/img/nyheter/byggint.png" />
 	</div>
 </section>
 
@@ -331,21 +330,6 @@
   </div>
 </section>
 
-	<!-- Email Form Dialog -->
-	<div class="dialog hidden" data-dialog-id="form" data-on-submit-acton="close" data-set-cookie="30">
-		<div class="close" data-dialog-action="close"></div>
-		<div class="dialogContent">
-			<div class="text center">
-				<strong>Hejsan!</strong>, skriv gärna upp dig på vårt nyhetsbrev för att följa vår resa.
-			</div>
-		</div>
-		<form action="ajax-email.php" method="post" autocomplete="on">
-			<ul>
-				<li><input type="email" autocomplete="on" placeholder="Din e-postadress" /></li>
-				<li class="indigo" data-type="submit">OK</li>
-			</ul>
-		</form>
-	</div>
 	<!-- Preloader -->
 	<div class="loadingIcon"><svg class="loading-icon" id="loading-circle" viewBox="0 0 18 18"><circle class="circle" opacity=".1" stroke="#fff" stroke-width="2" stroke-miterlimit="10" cx="9" cy="9" r="8" fill="none"></circle><circle class="dash" stroke-width="2" stroke-linecap="round" stroke-miterlimit="10" stroke-dasharray="1,100" cx="9" cy="9" r="8" fill="none"></circle></svg></div>
 	<!-- Panel Bottom #22 -->
