cta cards hooking up

--- a/index.html
+++ b/index.html
@@ -274,12 +274,14 @@
 
 <section class="globalFooterCards">
 	<div style="max-width: 1040px;" class="container-xl">
-		<a href="/pris/" class="common-Link globalFooterCard soft-shadow white">
+		<a href="#" class="common-Link globalFooterCard soft-shadow white">
 			<h2 style="max-width: 66.667%;" class="text-blue bold"> Möt oss på nordbygg!</h2>
 			<img src="/assets/img/nyheter/nordbygg.jpg" />
-		<a href="/om-icontrol/" style="margin-left: 10px;" class="common-Link globalFooterCard soft-shadow white">
+		</a>
+		<a href="#" style="margin-left: 10px;" class="common-Link globalFooterCard soft-shadow white">
 			<h2 style="max-width: 66.667%;" class="text-blue bold"> Senaste senaste</h2>
 			<img src="/assets/img/nyheter/byggint.png" />
+		</a>
 	</div>
 </section>
 
