still setting cta footer buttons

--- a/index.html
+++ b/index.html
@@ -272,14 +272,18 @@
   </div>
 </section>
 
-<section class="globalFooterCards">
+<section class="globalFooterCards margin-bottom-8">
 	<div style="max-width: 1040px;" class="container-xl">
 		<a href="#" class="common-Link globalFooterCard soft-shadow white">
-			<h2 style="max-width: 66.667%;" class="text-blue bold"> Möt oss på nordbygg!</h2>
-			<img src="/assets/img/nyheter/nordbygg.jpg" />
+			<h2 class="text-white">
+				Möt oss på nordbygg!
+				<p class="text-white opacity-10">Besiktningsman.se har monter på Nordbygg 2017</p>
+			</h2>
+			<div class="img-fade"></div>
+			<img src="/assets/img/nyheter/nordbyggbg.jpg" class="" style="width: 100%;border-radius:4px;" />
 		</a>
 		<a href="#" style="margin-left: 10px;" class="common-Link globalFooterCard soft-shadow white">
-			<h2 style="max-width: 66.667%;" class="text-blue bold"> Senaste senaste</h2>
+			<h2 style="max-width: 66.667%;" class="text-blue bold"></h2>
 			<img src="/assets/img/nyheter/byggint.png" />
 		</a>
 	</div>
