file routing needs rooting

--- a/index.html
+++ b/index.html
@@ -280,11 +280,11 @@
 				<p class="text-white opacity-10">Besiktningsman.se har monter på Nordbygg 2017</p>
 			</h2>
 			<div class="img-fade"></div>
-			<img src="/assets/img/nyheter/nordbyggbg.jpg" class="" style="width: 100%;border-radius:4px;" />
+			<img src="assets/img/nyheter/nordbyggbg.jpg" class="" style="width: 100%;border-radius:4px;" />
 		</a>
 		<a href="#" style="margin-left: 10px;" class="common-Link globalFooterCard soft-shadow white">
 			<h2 style="max-width: 66.667%;" class="text-blue bold"></h2>
-			<img src="/assets/img/nyheter/byggint.png" />
+			<img src="assets/img/nyheter/byggint.png" />
 		</a>
 	</div>
 </section>
@@ -296,7 +296,7 @@
 
         <ul class="grid fixedSpaces left">
           <li class="col-5-10 wide-col ae-3">
-            <a href="/" class="logo"><img src="../assets/svg/bm_logo_white.svg" alt="Besiktningsman.se" style="width: 250px;"></a>
+            <a href="/" class="logo"><img src="assets/svg/bm_logo_white.svg" alt="Besiktningsman.se" style="width: 250px;"></a>
           </li>
           <li class="col-5-10 ae-3">
             <h3 class="margin-bottom-1">Kontor</h3>
