--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
       </ul>
     </div>
-    <div class="center"><a href="/"> <img src="assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;">  </a></div>
+    <div class="center"><a href="/"> <img src="assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="width:200px;">  </a></div>
     <div class="right">
       <ul class="menu crop small bold">
         <li><a href="erbjudande/">Vårt erbjudande</a></li>
@@ -213,7 +213,7 @@
 									<br> Ger möjlighet att överlämna ett färdigt projekt med noll byggfel på avtalad dag.</p></div>
 		            </li>
 		            <li class="col-6-12 left ae-1 fromRight">
-		              <img class="ipad-32" data-action="zoom" style="width: 1000px;" src="assets/img/ispect/stats.png" alt="iPad Image"/>
+		              <img class="ipad-32" data-action="zoom" style="width: 1000px;border-radius:6px;" src="assets/img/ispect/stats.png" alt="iPad Image"/>
 		            </li>
 		          </ul>
 		        </div>
