--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 							</a>
             </li>
             <li class="col-6-12 left">
-              <h1 class="ae-2">iSpect ger snabb leverans av besiktningsutlåtandet.</h1>
+              <h1 class="ae-2" style="font-size:51px;">iSpect ger snabb leverans av besiktningsutlåtandet.</h1>
               <div class="ae-3">
                 <p>Scene Generator allows you to create your own unique scenes just by dragging and dropping items into a special&nbsp;scene.</p>
               </div>
